<resources>
    <string name="app_name">Taboom</string>
    <string name="add">Aggiungi</string>
    <string name="play">Gioca</string>
    <string name="update">Modifica</string>
    <string name="reset">RESET</string>
    <string name="title_modify_timer">Modifica il timer</string>
    <string name="modify">MODIFICA</string>
    <string name="card_title_needed">Per il salvataggio di una carta è obbligatorio il titolo</string>
    <string name="no_taboo_word">---------</string>
    <string name="card_added">Carta salvata con successo!</string>
    <string name="default_title_card">Inserisci il titolo</string>
    <string name="default_taboo">Inserisci tabù</string>
    <string name="card_already_exists_2">è gia stata salvata</string>
    <string name="team_a_name">Squadra A</string>
    <string name="team_b_name">Squadra B</string>
    <string name="reset_score">Azzera\npunteggio</string>
    <string name="card_shuffled">Le carte sono state mescolate</string>
    <string name="team_name_tooltip">Nome della squadra</string>
    <string name="tooltip_shuffle">Mescola carte</string>
    <string name="timer_tooltip">Timer</string>
    <string name="play_tooltip">Avvia</string>
    <string name="reset_tooltip">Reset</string>
    <string name="add_tooltip">Aggiungi carta</string>
    <string name="minutes_tooltip">Minuti</string>
    <string name="seconds_tooltip">Secondi</string>
    <string name="pause_tooltip">Pausa</string>
    <string name="clean_tooltip">Cancella</string>
    <string name="card_number">Totale carte</string>
    <string name="delete_tag">Elimina TAG</string>
    <string name="all_cards_tag">Tutte le carte</string>
    <string name="disney_tag">Disney</string>
    <string name="celebrities_tag">Personaggi famosi</string>
    <string name="title_modify_tag">Modifica nome TAG</string>
    <string name="insert_new_tag">Inserisci un nuovo TAG</string>
    <string name="delete_tag_dialog_message">Sei sicuro di voler eliminare questo TAG?</string>
    <string name="cancel">Annulla</string>
    <string name="confirm">Conferma</string>
    <string name="title_delete_tag">Elimina TAG</string>
    <string name="delete_card_tag_dialog_message_1">Vuoi eliminare la carta</string>
    <string name="delete_card_tag_dialog_message_2">o soltanto rimuovere il TAG</string>
    <string name="delete_card">Elimina carta</string>
    <string name="remove_tag">Rimuovi tag</string>
    <string name="delete">Elimina</string>
    <string name="button_add_tag">Aggiungi TAG</string>
    <string name="title_choose_tag">Seleziona i TAG</string>
    <string name="tag">TAG</string>
    <string name="create_tag_tooltip">Crea TAG</string>
    <string name="card_already_exists_1">La carta</string>
    <string name="tag_already_exist">Il TAG</string>
    <string name="tag_already_exists_2">è gia stato salvato</string>
    <string name="delete_card_tag_dialog_message_3">dalla carta?</string>
    <string name="number_of_tags_chosen_1">Hai selezionato</string>
    <string name="number_of_tags_chosen_2">TAG</string>
    <string name="tag_name_required">Aggiungi il nome del TAG</string>
    <string name="min_one_tag">Almeno un gruppo dev\'essere selezionato</string>
    <string name="title">Titolo:</string>
    <string name="taboo1">Taboo 1:</string>
    <string name="taboo2">Taboo 2:</string>
    <string name="taboo3">Taboo 3:</string>
    <string name="taboo4">Taboo 4:</string>
    <string name="taboo5">Taboo 5:</string>
    <string name="save">SALVA</string>
    <string name="title_already_exists">Titolo già esistente</string>
    <string name="card_updated">Carta aggiornata</string>
    <string name="invalid_tag_name">Nome TAG non valido</string>
    <string name="add_card_title_toolbar">Aggiungi carta</string>
    <string name="info">Info</string>
    <string name="info_message_add">Qui puoi aggiungere tutte le carte che vuoi (attenzione che ogni \"Titolo\" è unico).\nAggiungi i TAG che preferisci per creare dei gruppi personalizzati di parole.</string>
    <string name="update_title_toolbar">Modifica carte</string>
    <string name="info_message_update">Lo scopo del gioco è far indovinare ai propri compagni il titolo della carta senza usare le parole taboo, né loro derivati, né gesti, né suoni.\n\nIn questa sezione puoi modificare le carte e scegliere i gruppi di carte (TAG) con cui desideri giocare per fare una partita personalizzata.</string>
    <string name="warning">Attenzione</string>
    <string name="want_to_exit">Sicuro di voler uscire dall\'applicazione?</string>
    <string name="welcome">Benvenuto!</string>
    <string name="file_saved">File salvato con successo!</string>
    <string name="upload">Carica carte</string>
    <string name="save_cards">Salva carte selezionate</string>
    <string name="cards_uploaded">Carte caricate con successo!</string>
    <string name="operation_canceled">Operazione annullata</string>
    <string name="cant_read_file">Impossibile leggere il file</string>
    <string name="tooltip_return_top">Ritorna all\'inizio</string>
    <string name="minus">-1</string>
    <string name="plus">+1</string>
</resources>