<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/save"
        android:title="@string/save_cards"
        android:icon="@drawable/ic_baseline_save_24"
        android:iconTint="@color/white"
        app:showAsAction="ifRoom|withText"/>
    <item android:id="@+id/upload"
        android:title="@string/upload"
        android:icon="@drawable/ic_baseline_drive_folder_upload_24"
        android:iconTint="@color/white"
        app:showAsAction="ifRoom|withText"/>
    <item android:id="@+id/info"
        android:title="@string/info"
        android:icon="@drawable/ic_baseline_info_24"
        android:iconTint="@color/white"
        app:showAsAction="ifRoom|withText"/>
</menu>
