<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schematch_parentmas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="-4dp"
    tools:context=".fragments.AddFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.10"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <include layout="@layout/card_add"
        android:id="@+id/card_included"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.80"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_layout"
        app:layout_constraintBottom_toTopOf="@id/layout_menu_timer"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_menu_timer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.10"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/add_tag"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:gravity="center"
            android:text="@string/button_add_tag"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <android.widget.Button
            android:id="@+id/add_card"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:gravity="center"
            android:tooltipText="@string/add_tooltip"
            android:background="@drawable/ic_baseline_add_24"
            app:layout_constraintStart_toEndOf="@id/add_tag"
            app:layout_constraintEnd_toStartOf="@id/clear"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <Button
            android:id="@+id/clear"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginBottom="4dp"
            android:gravity="center"
            android:tooltipText="@string/clean_tooltip"
            android:background="@drawable/ic_baseline_delete_24"
            app:layout_constraintStart_toEndOf="@id/add_card"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>